Fixed issue [#24253] Installation IE fixes (Andrea Tarr).
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@20246 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/template/css/template.css
+++ b/installation/template/css/template.css
@@ -67,6 +67,10 @@ td:first-child {
 	width: 200px;
 }
 
+.final-table td:first-child {
+	width: auto;
+}
+
 .sample-data td:first-child {
 	/*width: auto;*/
 }
